# words-to-data

./: .env  .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  ci_maturin.yaml  publish_crates.yaml
annotator/: Cargo.toml  README.md
annotator/src/: lib.rs  main.rs
annotator/ui/: index.html  package-lock.json  package.json  vite.config.js
annotator/ui/src/: App.css  App.svelte  ReviewTab.svelte
python/tests/: test_bindings.py  test_congress.py  test_dataset.py  test_website_examples.py
python/words_to_data/: __init__.py  __init__.pyi
src/: constants.rs  date.rs  io.rs  lib.rs  python.rs  utils.rs
src/annotation/: mod.rs
src/congress/: cache.rs  client.rs  download.rs  error.rs  member.rs  mod.rs  sponsor.rs  vote.rs
src/dataset/: error.rs  mod.rs
src/diff/: mod.rs
src/legal_diff/: mod.rs
src/uslm/: bill_parser.rs  mod.rs  parser.rs  path.rs
tests/: bill_parser_tests.rs  congress_tests.rs  dataset_tests.rs  date_tests.rs  diff_tests.rs  edge_case_tests.rs  io_tests.rs  legal_diff_tests.rs  merge_element_tests.rs  parser_tests.rs  path_tests.rs  source_credit_tests.rs  text_content_tests.rs  tree_navigation_tests.rs  type_conversion_tests.rs  utils_tests.rs  website_example_tests.rs
tests/test_data/bills/: pl-119-21.xml
tests/test_data/bills/119-hr-1/: bill_119_hr_1.json  bill_119_hr_1.xml  bill_119_hr_1_cosponsors.json  bill_119_hr_1_text.json  member_A000375.json
tests/test_data/congress/members/: L000174.json
