[package]
name = "words-to-data"
version = "0.1.2"
edition = "2024"
exclude = ["tests/"]
description = "Convert Legal Documents Into Diffable Data Structures"
repository = "https://github.com/Scronkfinkle/words-to-data"
license = "MIT"

[lib]
name = "words_to_data"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]  # rlib = Rust consumers, cdylib = Python

[dependencies]
rayon = "1.11.0"
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
similar = "2.7.0"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde"] }
pyo3 = { version = "0.28", features = ["extension-module", "serde"], optional = true }
pythonize = { version = "0.28", features = ["arbitrary_precision"], optional = true }

[features]
python = ["pyo3", "pythonize"]