[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "words-to-data"
version = "0.1.2"
description = "Convert Legal Documents Into Diffable Data Structures"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.maturin]
python-source = "python"
module-name = "words_to_data.words_to_data"
bindings = "pyo3"
features = ["python"] # Enable python feature flag