[package]
name = "annotator"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "annotator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3" }
regex = "1"
words-to-data = { path = ".." }
rayon = "1.11.0"
